small fixes for deployment
